Implement new interface for Garbage Collection

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 -------
 - Remove old tax rate priority
 - Include child entities in features.json to inform JTL-Wawi if they are supported or not
+- Implement new interface for Garbage Collection
 
 1.0.1.0
 -------
